--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,6 @@
     </build>
     <modules>
         <module>CustomConstraint</module>
+        <module>JPAPersistenceLifeCycle</module>
     </modules>
 </project>
