JPA custom validation initial commit

--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,6 @@
     <modules>
         <module>CustomConstraint</module>
         <module>JPAPersistenceLifeCycle</module>
+        <module>JPACustomValidation</module>
     </modules>
 </project>
